objects/EUR_CRM_Route_Template_Item__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipName>EUR_CRM_Route_Template_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Default_Subject__c</fullName>
        <formula>IF( OR(CONTAINS(EUR_CRM_Route_Template__r.RecordType.DeveloperName, &apos;EUR_LT&apos;),
       CONTAINS(EUR_CRM_Route_Template__r.RecordType.DeveloperName, &apos;EUR_LV&apos;),
       CONTAINS(EUR_CRM_Route_Template__r.RecordType.DeveloperName, &apos;EUR_EE&apos;)) , 
&apos;Visit&apos;, 
&apos;Visit: &apos;+EUR_CRM_Account__r.Name+&apos;: &apos;+  EUR_CRM_Account__r.EUR_CRM_Street__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Event_Count__c</fullName>
        <formula>IF( CONTAINS(EUR_CRM_Route_Template__r.RecordType.DeveloperName, &apos;JB_&apos;) ,  

(EUR_CRM_Account__r.EUR_CRM_Visit_Frequency_Filtered__r.EUR_CRM_No_of_Visits_Within_Interval__c  *  CEILING((   (EUR_CRM_Route_Template__r.EUR_CRM_Planning_Period__c *7)/ EUR_CRM_Account__r.EUR_CRM_Visit_Frequency_Filtered__r.EUR_CRM_Frequency_Span_Days__c  ))),

(EUR_CRM_Account__r.EUR_CRM_Visit_Frequency__r.EUR_CRM_No_of_Visits_Within_Interval__c *  CEILING((   (EUR_CRM_Route_Template__r.EUR_CRM_Planning_Period__c *7)/EUR_CRM_Account__r.EUR_CRM_Visit_Frequency__r.EUR_CRM_Frequency_Span_Days__c )))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_First_Day__c</fullName>
        <label>First Day</label>
        <summarizedField>EUR_CRM_Route_Template_Day__c.EUR_CRM_Day__c</summarizedField>
        <summaryForeignKey>EUR_CRM_Route_Template_Day__c.EUR_CRM_Route_Template_Item__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Last_Scheduled_Visit__c</fullName>
        <description>Latest visit scheduled by Visitation Plan</description>
        <label>Last Scheduled Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Meeting_Duration_Minutes__c</fullName>
        <label>Meeting Duration (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Previous_Visit_Frequency__c</fullName>
        <label>Previous Visit Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Previous_Visit_Span__c</fullName>
        <description>Previous span value of visit frequency</description>
        <label>Previous Visit Span</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Route_Template__c</fullName>
        <label>Route Template</label>
        <referenceTo>EUR_CRM_Route_Template__c</referenceTo>
        <relationshipName>EUR_CRM_Route_Template_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_Frequency_Modified__c</fullName>
        <formula>IF( 
OR(
		OR(
			AND(ISNULL(EUR_CRM_Previous_Visit_Frequency__c), ISNULL(EUR_CRM_Previous_Visit_Span__c)),
			AND(ISBLANK(EUR_CRM_Previous_Visit_Frequency__c), ISBLANK(EUR_CRM_Previous_Visit_Span__c))
		),
		AND(
			EUR_CRM_Visit_Span__c == EUR_CRM_Previous_Visit_Span__c,
			EUR_CRM_Visit_Frequency__c ==  EUR_CRM_Previous_Visit_Frequency__c
		) 
) , 

false, 

true
)</formula>
        <label>Visit Frequency Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_Frequency_Name__c</fullName>
        <formula>IF(CONTAINS(EUR_CRM_Route_Template__r.RecordType.DeveloperName , &apos;JB&apos;) , 
 EUR_CRM_Account__r.EUR_CRM_Visit_Frequency_Filtered__r.Name , 
 EUR_CRM_Account__r.EUR_CRM_Visit_Frequency__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Frequency Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_Frequency__c</fullName>
        <formula>IF(CONTAINS(EUR_CRM_Route_Template__r.RecordType.DeveloperName , &apos;JB&apos;) , 
EUR_CRM_Account__r.EUR_CRM_Visit_Frequency_Filtered__r.EUR_CRM_No_of_Visits_Within_Interval__c , 
EUR_CRM_Account__r.EUR_CRM_Visit_Frequency__r.EUR_CRM_No_of_Visits_Within_Interval__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_Span__c</fullName>
        <formula>IF(CONTAINS(EUR_CRM_Route_Template__r.RecordType.DeveloperName , &apos;JB&apos;) , 
EUR_CRM_Account__r.EUR_CRM_Visit_Frequency_Filtered__r.EUR_CRM_Frequency_Span_Days__c , 
EUR_CRM_Account__r.EUR_CRM_Visit_Frequency__r.EUR_CRM_Frequency_Span_Days__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Span</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Day_Count__c</fullName>
        <label>Event Day Count</label>
        <summaryForeignKey>EUR_CRM_Route_Template_Day__c.EUR_CRM_Route_Template_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Route Template Item (EU)</label>
    <nameField>
        <displayFormat>RTI-{0000000000}</displayFormat>
        <label>Route Template Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route Template Item (EU)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>